[metadata]
name = fame
version = 0.0.1
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/vtes
description="An analysis tool for Vampire: The Eternal Struggle",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    License :: Other/Proprietary
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    arrow
    requests

[options.entry_points]
console_scripts =
    fame = fame.cli:main

[options.extras_require]
dev =
    black
    flake8

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[zest.releaser]
create-wheel = yes

[check-manifest]
